sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:4: error: not found: value idCaseTraitee
  idCaseTraitee = 0
  ^AlgGnomeSort:6: error: not found: value idCaseTraitee
  while (idCaseTraitee < getNombreValeurs() - 1)
         ^AlgGnomeSort:8: error: not found: value idCaseTraitee
    if (idCaseTraitee == 0)
        ^AlgGnomeSort:9: error: not found: value idCaseTraitee
    	idCaseTraitee += 1
        ^AlgGnomeSort:12: error: not found: value i
      if (plusPetit(i + 1, i - 1))
                    ^AlgGnomeSort:12: error: not found: value i
      if (plusPetit(i + 1, i - 1))
                           ^AlgGnomeSort:14: error: not found: value i
        echange(i - 1, i + 1)
                ^AlgGnomeSort:14: error: not found: value i
        echange(i - 1, i + 1)
                       ^AlgGnomeSort:15: error: not found: value idCaseTraitee
        idCaseTraitee -= 1
        ^AlgGnomeSort:18: error: not found: value idCaseTraitee
        idCaseTraitee += 1
        ^